--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,16 +17,10 @@
 }
 
 
-
 * {
     margin: auto;
 }
 
-.container {
-    background-image: url("../img/background.jpg");
-    position: relative;
-    z-index: 1;
-}
 
 .container::before {
     content: "";
@@ -37,39 +31,47 @@
     top: 0px;
     left: 0px;
     background: #005bea;
-    opacity: 0.9;
+    opacity: 0.8;
     background: -webkit-linear-gradient(bottom, #005bea, #00c6fb);
     z-index: -1;
-    padding-bottom: 750px;
+}
+
+.container {
+    background-image: url("../img/background.jpg");
+    position: relative;
+    z-index: 1;
+    padding-bottom: 690px;
+
 }
 
 img.loginImage {
     border-radius: 80px;
     position: relative;
-    width: 125px;
-    top: 180px;
-    left: 450px;
+    width: 130px;
+    top: 185px;
+    left: 445px;
 
 }
 
 h3.imgText {
     color: white;
-    font-size: 20px;
+    font-size: 23px;
     text-align: center;
     position: relative;
     top: 200px;
-    font-family: Montserrat-ExtraBold, serif;
+    font-family: Montserrat-ExtraBold;
 }
 
 input.inputUsername {
     border: solid white 1px;
     border-radius: 23px;
     height: 45px;
-    width: 360px;
+    width: 330px;
     position: relative;
     top: 255px;
-    left: 330px;
-    font-family: Montserrat-ExtraBold, serif;
+    left: 335px;
+    font-family: Montserrat-ExtraBold;
+    padding: 0px 0px 0px 50px;
 
 }
 
@@ -77,32 +79,97 @@ input.inputPassword {
     border: solid white 1px;
     border-radius: 23px;
     height: 45px;
-    width: 360px;
+    width: 330px;
     position: relative;
-    top: 355px;
-    right: 40px;
-    font-family: Montserrat-ExtraBold, serif;
+    top: 313px;
+    right: 64px;
+    font-family: Montserrat-ExtraBold;
+    padding: 0px 0px 0px 50px;
+    color: #333333;
+
 
 }
 
 button.btn {
-    width: 370px;
-    height: 53px;
+    width: 385px;
+    height: 47px;
     background-color: #333333;
-    border: solid #333333;
+    border: solid #333333 1px;
     border-radius: 25px;
-    color: white;
+    color: #e0e0e0;
     font-size: 20px;
     position: relative;
-    top: 400px;
-    left: 330px;
+    top: 330px;
+    left: 350px;
     font-family: Montserrat-ExtraBold, serif;
 }
 
 input[type="text"].inputUsername::-webkit-input-placeholder {
     color: #8E8E8E;
+    font-size: 15px;
 }
 
 input[type="password"].inputPassword::-webkit-input-placeholder {
     color: #8E8E8E;
+    font-size: 15px;
+}
+
+i.icon1 {
+    position: relative;
+    left: 380px;
+    top: 250px;
+    color: #8E8E8E;
+    z-index: 1;
+}
+
+i.icon2 {
+    position: relative;
+    right: 20px;
+    top: 310px;
+    color: #8E8E8E;
+    z-index: 1;
+}
+
+.inputs {
+    margin-left: -20px;
+    margin-top: -5px;
+
+}
+
+button.btn::before {
+    content: "";
+    display: block;
+    position: absolute;
+    z-index: -1;
+    width: 100%;
+    height: 100%;
+    border-radius: 25px;
+    top: 0px;
+    left: 0px;
+    background: #005bea;
+    background: -webkit-linear-gradient(left, #005bea, #00c6fb);
+    -webkit-transition: all 0.5s;
+    opacity: 0;
+}
+
+button.btn:hover {
+    background: transparent;
+    border: none;
+    color: #fff;
+}
+
+button.btn:hover::before {
+    opacity: 1;
+}
+
+div.Username, div.Password {
+    display: inline-block;
+}
+
+div.Username:hover .icon1 {
+    color: #00c6fb;
+}
+
+div.Password:hover i.icon2 {
+    color: #00c6fb;
 }
